# gui-english-trainer

./: Cargo.toml
src/: app.rs  domain.rs  files.rs  main.rs  messages.rs  widgets.rs
